# UpSpa_benchmark

./: README.md
Implementation/: .gitignore  Cargo.toml  README.md  dockerfile
Implementation/docs/benchmarks/: bench.md
Implementation/docs/tspa/: auth.md  reg.md
Implementation/docs/upspa/: auth.md  pwd_update.md  reg.md  secret_update.md  setup.md
Implementation/src/: crypto.rs  crypto_tspa.rs  lib.rs
Implementation/src/protocols/: mod.rs  sp.rs  tspa.rs  upspa.rs
