[package]
name = "tspa"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
blake3 = "1"
curve25519-dalek = { version = "4", features = ["alloc"] }
rand_core = "0.6"
rand_chacha = "0.3"
chacha20poly1305 = { version = "0.10", features = ["std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }

# TSPA AES-CTR
aes = "0.8"
ctr = "0.9"

[dev-dependencies]
criterion = "0.5"